# otel-shop-monolith

./: .env-example  .gitignore  db.sqlite3  justfile  pyproject.toml
config/: settings.py
core/: models.py  utils.py
